--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -49,6 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/home_to_side"
+                    android:visibility="gone"
                     android:background="@drawable/shape_borderline_grey_homename"
                     android:text="@string/regist_lingyu"
                     android:textColor="@android:color/darker_gray"
@@ -152,7 +153,7 @@
 
         <Button
             android:id="@+id/bt_login"
-            android:layout_width="100dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_welcome"
             android:layout_marginLeft="@dimen/mine_login_side"
@@ -161,6 +162,7 @@
             android:paddingLeft="@dimen/mine_login_side"
             android:paddingRight="@dimen/mine_login_side"
             android:text="@string/login"
+            android:textSize="@dimen/common_textsize"
             android:textColor="@android:color/white" />
 
         <ImageView
