--- a/app/src/main/res/layout/view_action_title.xml
+++ b/app/src/main/res/layout/view_action_title.xml
@@ -10,7 +10,7 @@
         android:layout_height="20dp"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/login_num_side"
-        android:src="@drawable/nav_icon_back" />
+        android:src="@drawable/navi_bar_back_img" />
 
     <TextView
         android:id="@+id/tv_title"
@@ -30,5 +30,11 @@
         android:layout_centerVertical="true"
         android:visibility="gone"
         android:layout_marginRight="@dimen/login_num_side" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/darker_gray"/>
 
 </RelativeLayout>
