--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -168,7 +168,7 @@
             android:layout_width="1dp"
             android:layout_height="16dp"
             android:layout_centerInParent="true"
-            android:background="@android:color/black" />
+            android:background="@android:color/darker_gray" />
 
         <TextView
             android:id="@+id/tv_forget_pwd"
@@ -178,7 +178,7 @@
             android:layout_toLeftOf="@id/iv_line"
             android:text="@string/login_forget_pwd"
             android:textSize="@dimen/common_textsize"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/darker_gray"/>
 
         <TextView
             android:id="@+id/tv_sign_up"
@@ -188,7 +188,7 @@
             android:layout_toRightOf="@id/iv_line"
             android:text="@string/regist_now"
             android:textSize="@dimen/common_textsize"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/darker_gray"/>
     </RelativeLayout>
 
 </RelativeLayout>
