--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -216,4 +216,15 @@
             android:src="@drawable/me_icon_go" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/bt_exit_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/shape_borderline_redfull"
+        android:text="@string/setting_exit"
+        android:textColor="@android:color/white"/>
+
 </LinearLayout>
