--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,230 +1,230 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white"
-    android:orientation="vertical">
-
-    <com.minyou.manba.ui.ActionTitleView
-        android:id="@+id/atv_title"
-        android:layout_width="fill_parent"
-        android:layout_height="@dimen/common_title_height"
-        android:gravity="center_vertical"></com.minyou.manba.ui.ActionTitleView>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:id="@+id/ll_user_setting"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="@dimen/common_to_side">
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_user_pic"
-            android:layout_width="@dimen/setting_pic_height"
-            android:layout_height="@dimen/setting_pic_height"
-            android:src="@drawable/login_icon_qq" />
+        <com.minyou.manba.ui.ActionTitleView
+            android:id="@+id/atv_title"
+            android:layout_width="fill_parent"
+            android:layout_height="@dimen/common_title_height"
+            app:titleText="@string/my_shezhi"
+            android:gravity="center_vertical"></com.minyou.manba.ui.ActionTitleView>
 
-        <TextView
-            android:id="@+id/tv_user_name"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/ll_user_setting"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/common_to_side"
-            android:layout_weight="1"
-            android:text="123" />
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="@dimen/common_to_side">
 
-        <ImageView
-            android:layout_width="@dimen/setting_goicon_height"
-            android:layout_height="@dimen/setting_goicon_height"
-            android:src="@drawable/me_icon_go" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/common_to_side"
+                android:layout_weight="1"
+                android:textSize="@dimen/common_textsize"
+                android:text="@string/setting_user_info" />
+
+            <ImageView
+                android:layout_width="@dimen/setting_goicon_height"
+                android:layout_height="@dimen/setting_goicon_height"
+                android:src="@drawable/me_icon_go" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@android:color/darker_gray" />
+
+        <LinearLayout
+            android:id="@+id/ll_tongzhi_setting"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="@dimen/common_to_side">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/common_to_side"
+                android:layout_weight="1"
+                android:text="@string/setting_notification"
+                android:textSize="@dimen/common_textsize" />
+
+            <CheckBox
+                android:layout_width="@dimen/setting_switch_width"
+                android:layout_height="@dimen/setting_switch_height"
+                android:background="@drawable/select_switch"
+                android:button="@null" />
+
+
+            <Switch
+                android:id="@+id/switch_notify"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textOff=""
+                android:textOn=""
+                android:thumb="@drawable/thumb"
+                android:track="@drawable/track"
+                android:visibility="gone" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@android:color/darker_gray" />
+
+        <LinearLayout
+            android:id="@+id/ll_huancun_setting"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="@dimen/common_to_side">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/common_to_side"
+                android:layout_weight="1"
+                android:text="@string/setting_clear_cache"
+                android:textSize="@dimen/common_textsize" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/common_to_side"
+                android:text="100M"
+                android:textSize="@dimen/common_textsize" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@android:color/darker_gray" />
+
+        <LinearLayout
+            android:id="@+id/ll_qa_setting"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="@dimen/common_to_side">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/common_to_side"
+                android:layout_weight="1"
+                android:text="@string/setting_common_qa"
+                android:textSize="@dimen/common_textsize" />
+
+            <ImageView
+                android:layout_width="@dimen/setting_goicon_height"
+                android:layout_height="@dimen/setting_goicon_height"
+                android:src="@drawable/me_icon_go" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@android:color/darker_gray" />
+
+        <LinearLayout
+            android:id="@+id/ll_idea_fankui"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="@dimen/common_to_side">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/common_to_side"
+                android:layout_weight="1"
+                android:text="@string/setting_idea_fankui"
+                android:textSize="@dimen/common_textsize" />
+
+            <ImageView
+                android:layout_width="@dimen/setting_goicon_height"
+                android:layout_height="@dimen/setting_goicon_height"
+                android:src="@drawable/me_icon_go" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@android:color/darker_gray" />
+
+        <LinearLayout
+            android:id="@+id/ll_update_version"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="@dimen/common_to_side">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/common_to_side"
+                android:layout_weight="1"
+                android:text="@string/setting_update_version"
+                android:textSize="@dimen/common_textsize" />
+
+            <ImageView
+                android:layout_width="@dimen/setting_goicon_height"
+                android:layout_height="@dimen/setting_goicon_height"
+                android:src="@drawable/me_icon_go" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@android:color/darker_gray" />
+
+        <LinearLayout
+            android:id="@+id/ll_about_us"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="@dimen/common_to_side">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/common_to_side"
+                android:layout_weight="1"
+                android:text="@string/setting_about_us"
+                android:textSize="@dimen/common_textsize" />
+
+            <ImageView
+                android:layout_width="@dimen/setting_goicon_height"
+                android:layout_height="@dimen/setting_goicon_height"
+                android:src="@drawable/me_icon_go" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/bt_exit_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/shape_borderline_redfull"
+            android:text="@string/setting_exit"
+            android:textColor="@android:color/white" />
+
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@android:color/darker_gray" />
-
-    <LinearLayout
-        android:id="@+id/ll_tongzhi_setting"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="@dimen/common_to_side">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/common_to_side"
-            android:layout_weight="1"
-            android:text="@string/setting_notification"
-            android:textSize="@dimen/common_textsize" />
-
-        <CheckBox
-            android:layout_width="@dimen/setting_switch_width"
-            android:layout_height="@dimen/setting_switch_height"
-            android:button="@null"
-            android:background="@drawable/select_switch"/>
-
-
-        <Switch
-            android:id="@+id/switch_notify"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:textOff=""
-            android:textOn=""
-            android:thumb="@drawable/thumb"
-            android:track="@drawable/track" />
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@android:color/darker_gray" />
-
-    <LinearLayout
-        android:id="@+id/ll_huancun_setting"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="@dimen/common_to_side">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/common_to_side"
-            android:layout_weight="1"
-            android:text="@string/setting_clear_cache"
-            android:textSize="@dimen/common_textsize" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/common_to_side"
-            android:text="100M"
-            android:textSize="@dimen/common_textsize" />
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@android:color/darker_gray" />
-
-    <LinearLayout
-        android:id="@+id/ll_qa_setting"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="@dimen/common_to_side">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/common_to_side"
-            android:layout_weight="1"
-            android:text="@string/setting_common_qa"
-            android:textSize="@dimen/common_textsize" />
-
-        <ImageView
-            android:layout_width="@dimen/setting_goicon_height"
-            android:layout_height="@dimen/setting_goicon_height"
-            android:src="@drawable/me_icon_go" />
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@android:color/darker_gray" />
-
-    <LinearLayout
-        android:id="@+id/ll_idea_fankui"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="@dimen/common_to_side">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/common_to_side"
-            android:layout_weight="1"
-            android:text="@string/setting_idea_fankui"
-            android:textSize="@dimen/common_textsize" />
-
-        <ImageView
-            android:layout_width="@dimen/setting_goicon_height"
-            android:layout_height="@dimen/setting_goicon_height"
-            android:src="@drawable/me_icon_go" />
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@android:color/darker_gray" />
-
-    <LinearLayout
-        android:id="@+id/ll_update_version"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="@dimen/common_to_side">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/common_to_side"
-            android:layout_weight="1"
-            android:text="@string/setting_update_version"
-            android:textSize="@dimen/common_textsize" />
-
-        <ImageView
-            android:layout_width="@dimen/setting_goicon_height"
-            android:layout_height="@dimen/setting_goicon_height"
-            android:src="@drawable/me_icon_go" />
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@android:color/darker_gray" />
-
-    <LinearLayout
-        android:id="@+id/ll_about_us"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="@dimen/common_to_side">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/common_to_side"
-            android:layout_weight="1"
-            android:text="@string/setting_about_us"
-            android:textSize="@dimen/common_textsize" />
-
-        <ImageView
-            android:layout_width="@dimen/setting_goicon_height"
-            android:layout_height="@dimen/setting_goicon_height"
-            android:src="@drawable/me_icon_go" />
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/bt_exit_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/shape_borderline_redfull"
-        android:text="@string/setting_exit"
-        android:textColor="@android:color/white"/>
-
-</LinearLayout>
+</layout>
