--- a/app/src/main/res/layout/view_action_title.xml
+++ b/app/src/main/res/layout/view_action_title.xml
@@ -19,7 +19,8 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:visibility="gone"
-        android:textSize="@dimen/large_textsize"
+        android:textSize="20dp"
+        android:textColor="@color/colorCommon"
         android:text="123" />
 
     <ImageView
