--- a/app/src/main/res/layout/fragment_gonghui.xml
+++ b/app/src/main/res/layout/fragment_gonghui.xml
@@ -1,53 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="vertical">
-
-    <com.minyou.manba.ui.ActionTitleView
-        android:id="@+id/atv_title"
-        android:layout_width="fill_parent"
-        android:layout_height="@dimen/common_title_height"
-        android:gravity="center_vertical"
-        android:background="@android:color/background_light"></com.minyou.manba.ui.ActionTitleView>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/background_light"
-        android:orientation="horizontal"
-        android:padding="@dimen/common_to_side">
-
-        <ImageView
-            android:layout_width="1dp"
-            android:layout_height="wrap_content"
-            android:background="#2894FF" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/gonghui_hot"
-            android:textSize="@dimen/common_textsize" />
-    </LinearLayout>
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <!--<ListView-->
+        <com.minyou.manba.ui.ActionTitleView
+            android:id="@+id/atv_title"
+            android:layout_width="fill_parent"
+            android:layout_height="@dimen/common_title_height"
+            android:background="@android:color/background_light"
+            android:gravity="center_vertical"></com.minyou.manba.ui.ActionTitleView>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/background_light"
+            android:orientation="horizontal"
+            android:padding="@dimen/common_to_side">
+
+            <ImageView
+                android:layout_width="1dp"
+                android:layout_height="wrap_content"
+                android:background="#2894FF" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/gonghui_hot"
+                android:textSize="@dimen/common_textsize" />
+        </LinearLayout>
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <!--<ListView-->
             <!--android:id="@+id/lv_gonghui_list"-->
             <!--android:layout_width="fill_parent"-->
             <!--android:layout_height="wrap_content"-->
             <!--android:visibility="gone"-->
             <!--android:background="@android:color/background_light">-->
-        <!--</ListView>-->
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_gonghui_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/background_light"></android.support.v7.widget.RecyclerView>
-    </android.support.v4.widget.SwipeRefreshLayout>
+            <!--</ListView>-->
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_gonghui_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/background_light"></android.support.v7.widget.RecyclerView>
+        </android.support.v4.widget.SwipeRefreshLayout>
 
-</LinearLayout>
+    </LinearLayout>
+</layout>
