--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,9 @@
     <color name="common_text_color">#000000</color>
     <color name="color_zan">#FF981F</color>
 
+    <!-- 线条的颜色 -->
+    <color name="common_line_color">#e9e9e9</color>
+
     <color name="black">#000000</color><!--黑色 -->
     <color name="white">#FFFFFF</color><!--白色-->
     <color name="snow">#fffafa</color><!--雪白色 -->
